Parallax looking good, z-index issues

--- a/mopidy_iris/static/app.css
+++ b/mopidy_iris/static/app.css
@@ -2732,7 +2732,12 @@ main {
   .light-theme main {
     background: #FFFFFF; }
   main .content-wrapper {
+    position: relative;
     padding: 40px 40px 20px 40px; }
+    main .content-wrapper::after {
+      content: '';
+      clear: both;
+      display: block; }
   main a {
     color: inherit;
     text-decoration: none;
@@ -3232,15 +3237,19 @@ input[type="radio"]:checked + .label:after {
   left: 6px;
   background: #FFFFFF; }
 
+input[type="radio"]:focus + .label:before,
+input[type="radio"]:active + .label:before {
+  background: #a3a19f; }
+
 .light-theme input[type="radio"] + .label:before {
   background: #f4f2f0; }
 
 .light-theme input[type="radio"]:checked + .label:after {
   background: #121212; }
 
-input[type="radio"]:focus + .label:before,
-input[type="radio"]:active + .label:before {
-  background: #08d58f !important; }
+.light-theme input[type="radio"]:focus + .label:before,
+.light-theme input[type="radio"]:active + .label:before {
+  background: #383734; }
 
 input[type="checkbox"] + .label:before {
   font-family: "Material Icons";
@@ -3261,13 +3270,18 @@ input[type="checkbox"] + .label:before {
 input[type="checkbox"]:checked + .label:before {
   content: '\E5CA'; }
 
+input[type="checkbox"]:focus + .label:before,
+input[type="checkbox"]:active + .label:before {
+  background: #a3a19f; }
+
 .light-theme input[type="checkbox"] + .label:before {
   background: #f4f2f0;
   color: #121212; }
 
-input[type="checkbox"]:focus + .label:before,
-input[type="checkbox"]:active + .label:before {
-  background: #08d58f !important; }
+.light-theme input[type="checkbox"]:focus + .label:before,
+.light-theme input[type="checkbox"]:active + .label:before {
+  color: #FFFFFF;
+  background: #383734; }
 
 select {
   max-width: 100%; }
@@ -3873,10 +3887,8 @@ select {
     .light-theme .list__item:not(:first-child) {
       border-top-color: rgba(128, 128, 128, 0.1); }
   :root .notouch:not(.dragging) .list__item:not(.no-click):hover {
-    background: rgba(255, 255, 255, 0.03);
-    cursor: pointer; }
-    .light-theme :root .notouch:not(.dragging) .list__item:not(.no-click):hover {
-      background: rgba(0, 0, 0, 0.03); }
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.03); }
   :root .notouch:not(.dragging) .list__item:not(.no-click):active, :root .notouch:not(.dragging) .list__item:not(.no-click):focus {
     -webkit-transition: none !important;
     -moz-transition: none !important;
@@ -3885,6 +3897,8 @@ select {
     -moz-transform: scale(0.997);
     -webkit-transform: scale(0.997);
     transform: scale(0.997); }
+  :root .light-theme.notouch:not(.dragging) .list__item:not(.no-click):hover {
+    background: rgba(0, 0, 0, 0.03); }
   .list__item .select-zone,
   .list__item .drag-zone {
     display: none; }
@@ -4227,6 +4241,12 @@ select {
   height: 100%;
   max-height: 60vh;
   z-index: -1; }
+  .parallax__layer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
   .parallax__image {
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
@@ -6633,8 +6653,7 @@ main .track-view {
       padding: 0; } }
 
 .queue-view .parallax {
-  opacity: 0.5;
-  margin-bottom: -45vh; }
+  opacity: 0.5; }
 
 .queue-view .current-track {
   text-align: center;
@@ -6774,11 +6793,19 @@ main .track-view {
 .discover-view .intro {
   position: relative;
   padding: 90px 40px 70px;
-  z-index: 1; }
+  z-index: -1; }
   .discover-view .intro h1 {
     font-size: 3rem;
     line-height: 3rem;
     padding-bottom: 10px; }
+  .discover-view .intro .parallax {
+    position: absolute;
+    max-height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1; }
   .discover-view .intro__liner {
     z-index: 2;
     position: relative;
@@ -6902,6 +6929,12 @@ main .track-view {
 .discover-view section.tracks .pull-right .button,
 .discover-view section.tracks .pull-right button {
   margin-right: 0; }
+
+.discover-view .content-wrapper {
+  position: relative;
+  background: #181818; }
+  .light-theme .discover-view .content-wrapper {
+    background: #FFFFFF; }
 
 @media (max-width: 800px) {
   .discover-view .intro {
