--- a/src/scss/views/_queue.scss
+++ b/src/scss/views/_queue.scss
@@ -1,9 +1,7 @@
 
 .queue-view {
-
 	.parallax {
 		opacity: 0.5;
-		margin-bottom: -45vh;
 	}
 
 	.current-track {
